--- a/index.html
+++ b/index.html
@@ -1,10 +1,136 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Desafío Viajes de Chile</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Viajes Chile</title>
+    <meta name="author" content="Sebastián González Rozas">
+<!-- Bootstrap 5.1.3 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<!--Google Font: Open Sans 400 700 (Regular, Bold)-->
+    <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Lobster&display=swap" rel="stylesheet">
+<!--Font Awesome 5.15.1-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+<!--Mi estilo-->
+    <link rel="stylesheet" href="assets/css/style.css">
+<!--JQuery-->
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <nav class="container-fluid navbar navbar-expand-lg navbar-dark fixed-top">
+		<div class="container text-left" >
+			<a class="navbar-brand lobster-1" href="#"><h4 class="display-1 font-weight-bolder my-3 fs-2" style="color:#ffffff">aaaaaa</h4></a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" arialabel="Toggle navigation"> 
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav ms-auto">
+					<li class="nav-item active"><a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a></li>
+					<li class="nav-item"><a class="nav-link" href="#">Productos</a></li>
+					<li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+
+    <header>
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="Assets/img/carousel1.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="Assets/img/carousel2.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="Assets/img/carousel3.jpg" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </header>
+
+    <section class="container-fluid text-center text-white bg-black p-3">
+        <div class="container">
+            <h1 class="border-2 border-bottom">¿Quiénes somos?</h1>
+        </div>
+        <div class="container">
+            <div class="row text-start">
+                <div class="col-4">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam deleniti repellat eius dolores odit. Voluptatibus natus cupiditate perspiciatis repellendus accusamus deserunt eveniet. Sunt reprehenderit, esse aut eius illum corrupti perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum deserunt minima fuga a excepturi voluptate! Molestiae possimus optio enim labore voluptates accusantium, qui dolorem recusandae beatae nemo blanditiis vel mollitia! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates aut facere natus optio, pariatur corporis quo dolor vel! Rerum sed impedit, obcaecati possimus omnis numquam modi animi nulla molestiae aspernatur!</p>
+                </div>
+                <div class="col-4">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam deleniti repellat eius dolores odit. Voluptatibus natus cupiditate perspiciatis repellendus accusamus deserunt eveniet. Sunt reprehenderit, esse aut eius illum corrupti perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum deserunt minima fuga a excepturi voluptate! Molestiae possimus optio enim labore voluptates accusantium, qui dolorem recusandae beatae nemo blanditiis vel mollitia! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates aut facere natus optio, pariatur corporis quo dolor vel! Rerum sed impedit, obcaecati possimus omnis numquam modi animi nulla molestiae aspernatur!</p>
+                </div>
+                <div class="col-4">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam deleniti repellat eius dolores odit. Voluptatibus natus cupiditate perspiciatis repellendus accusamus deserunt eveniet. Sunt reprehenderit, esse aut eius illum corrupti perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum deserunt minima fuga a excepturi voluptate! Molestiae possimus optio enim labore voluptates accusantium, qui dolorem recusandae beatae nemo blanditiis vel mollitia! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates aut facere natus optio, pariatur corporis quo dolor vel! Rerum sed impedit, obcaecati possimus omnis numquam modi animi nulla molestiae aspernatur!</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="container p-4">
+        <div class="text-center">
+            <h5>Destacados</h5>
+        </div>
+		<div class="row">
+			<div class="col-lg-3 col-sm-6 p-4">
+				<div class="card">
+					<img src="assets/img/card1.jpg" class="card-img-top" alt="colaciones">
+					<div class="card-body">
+					  	<h5 class="card-title fw-bold">Colaciones</h5>
+						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 col-sm-6 p-4">
+				<div class="card">
+					<img src="assets/img/card2.jpg" class="card-img-top" alt="colaciones">
+					<div class="card-body">
+					  	<h5 class="card-title fw-bold">Desayunos</h5>
+						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 col-sm-6 p-4">
+				<div class="card">
+					<img src="assets/img/card3.jpg" class="card-img-top" alt="colaciones">
+					<div class="card-body">
+					  	<h5 class="card-title fw-bold">Bebidas</h5>
+						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+					</div>
+				</div>
+			</div>
+            <div class="col-lg-3 col-sm-6 p-4">
+				<div class="card">
+					<img src="assets/img/card4.jpg" class="card-img-top" alt="colaciones">
+					<div class="card-body">
+					  	<h5 class="card-title fw-bold">Bebidas</h5>
+						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
+
+
+
+
+
+<!-- Bootstrap -->	
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<!-- JavaScript -->
+<script src="assets/js/main.js"></script>	
+
 </body>
 </html>
