--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <nav class="container-fluid navbar navbar-expand-lg navbar-dark fixed-top">
 		<div class="container text-left" >
-			<a class="navbar-brand lobster-1" href="#"><h4 class="display-1 font-weight-bolder my-3 fs-2" style="color:#ffffff">aaaaaa</h4></a>
+			<a class="navbar-brand" href="#"><img src="assets/img/viajes.svg" alt="Logo de Olivia Ros" width="50px"></a><h4 class="display-1 font-weight-bolder my-3 fs-2 text-start" style="color:#ffffff">Viajes Chile</h4>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" arialabel="Toggle navigation"> 
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -59,73 +59,86 @@
     </header>
 
     <section class="container-fluid text-center text-white bg-black p-3">
-        <div class="container">
-            <h1 class="border-2 border-bottom">¿Quiénes somos?</h1>
+        <div class="container border-2 border-bottom py-4 mb-5">
+            <h1>¿Quiénes somos?</h1>
         </div>
         <div class="container">
             <div class="row text-start">
                 <div class="col-4">
+                    <div class="bg-light">aaaaa
+                    </div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam deleniti repellat eius dolores odit. Voluptatibus natus cupiditate perspiciatis repellendus accusamus deserunt eveniet. Sunt reprehenderit, esse aut eius illum corrupti perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum deserunt minima fuga a excepturi voluptate! Molestiae possimus optio enim labore voluptates accusantium, qui dolorem recusandae beatae nemo blanditiis vel mollitia! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates aut facere natus optio, pariatur corporis quo dolor vel! Rerum sed impedit, obcaecati possimus omnis numquam modi animi nulla molestiae aspernatur!</p>
                 </div>
                 <div class="col-4">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam deleniti repellat eius dolores odit. Voluptatibus natus cupiditate perspiciatis repellendus accusamus deserunt eveniet. Sunt reprehenderit, esse aut eius illum corrupti perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum deserunt minima fuga a excepturi voluptate! Molestiae possimus optio enim labore voluptates accusantium, qui dolorem recusandae beatae nemo blanditiis vel mollitia! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates aut facere natus optio, pariatur corporis quo dolor vel! Rerum sed impedit, obcaecati possimus omnis numquam modi animi nulla molestiae aspernatur!</p>
+                    <div class="bg-light">aaaaaa
+                    </div>
                 </div>
                 <div class="col-4">
+                    <div class="bg-light">aaaaaa
+                    </div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam deleniti repellat eius dolores odit. Voluptatibus natus cupiditate perspiciatis repellendus accusamus deserunt eveniet. Sunt reprehenderit, esse aut eius illum corrupti perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum deserunt minima fuga a excepturi voluptate! Molestiae possimus optio enim labore voluptates accusantium, qui dolorem recusandae beatae nemo blanditiis vel mollitia! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates aut facere natus optio, pariatur corporis quo dolor vel! Rerum sed impedit, obcaecati possimus omnis numquam modi animi nulla molestiae aspernatur!</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="container p-4">
-        <div class="text-center">
-            <h5>Destacados</h5>
+    <section class="container-fluid p-4 bg-black">
+        <div class="container ">
+            <div class="text-center text-white border-2 border-bottom">
+                <h1>Destacados</h1>
+            </div>
+            <div class="row row-cols-1 row-cols-md-2 g-4">
+                <div class="col-lg-3 col-sm-6 p-4">
+                    <div class="card">
+                        <img src="assets/img/card1.jpg" class="card-img-top" alt="colaciones">
+                        <div class="card-body">
+                            <h5 class="card-title fw-bold">Colaciones</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 p-4">
+                    <div class="card">
+                        <img src="assets/img/card2.jpg" class="card-img-top" alt="colaciones">
+                        <div class="card-body">
+                            <h5 class="card-title fw-bold">Desayunos</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 p-4">
+                    <div class="card">
+                        <img src="assets/img/card3.jpg" class="card-img-top" alt="colaciones">
+                        <div class="card-body">
+                            <h5 class="card-title fw-bold">Bebidas</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 p-4">
+                    <div class="card">
+                        <img src="assets/img/card4.jpg" class="card-img-top" alt="colaciones">
+                        <div class="card-body">
+                            <h5 class="card-title fw-bold">Bebidas</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-		<div class="row">
-			<div class="col-lg-3 col-sm-6 p-4">
-				<div class="card">
-					<img src="assets/img/card1.jpg" class="card-img-top" alt="colaciones">
-					<div class="card-body">
-					  	<h5 class="card-title fw-bold">Colaciones</h5>
-						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-3 col-sm-6 p-4">
-				<div class="card">
-					<img src="assets/img/card2.jpg" class="card-img-top" alt="colaciones">
-					<div class="card-body">
-					  	<h5 class="card-title fw-bold">Desayunos</h5>
-						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-3 col-sm-6 p-4">
-				<div class="card">
-					<img src="assets/img/card3.jpg" class="card-img-top" alt="colaciones">
-					<div class="card-body">
-					  	<h5 class="card-title fw-bold">Bebidas</h5>
-						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-					</div>
-				</div>
-			</div>
-            <div class="col-lg-3 col-sm-6 p-4">
-				<div class="card">
-					<img src="assets/img/card4.jpg" class="card-img-top" alt="colaciones">
-					<div class="card-body">
-					  	<h5 class="card-title fw-bold">Bebidas</h5>
-						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-					</div>
-				</div>
-			</div>
-		</div>
 	</section>
 
+    <section id="contact" class="container-fluid bg-black">
+        <div class="container">
+            <h1 class="text-center text-white">Contacto</h1>
+            <div class="typeform-widget" data-url="https://wszlrkz0aip.typeform.com/to/TcQNq7QB" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=AYVtoJ&utm_source=typeform.com-13260463-Basic&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #999" target="_blank">Typeform</a> </div>
+        </div>
+    </section>
 
-
-
-
-
+    <footer class="bg-dark text-center text-light py-4">
+		<h4 class="lobster-1 display-1 fs-2 m-0" style="color:#ffffff">aaaaaa</h4>
+	</footer>
 
 <!-- Bootstrap -->	
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
