--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 <body>
     <nav class="container-fluid navbar navbar-expand-lg navbar-dark fixed-top">
 		<div class="container text-left" >
-			<a class="navbar-brand" href="#"><img src="assets/img/viajes.svg" alt="Logo de Olivia Ros" width="50px"></a><h4 class="display-1 font-weight-bolder my-3 fs-2 text-start" style="color:#ffffff">Viajes Chile</h4>
+			<a class="navbar-brand" href="#"><img src="assets/img/viajes.svg" alt="Logo de Olivia Ros" width="50px"></a><h4 class="display-1 my-3 fs-2 text-start">Viajes Chile</h4>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" arialabel="Toggle navigation"> 
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav ms-auto">
-					<li class="nav-item active"><a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Productos</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+					<li class="nav-item active"><a class="nav-link text-dark" href="#">Inicio<span class="sr-only">(current)</span></a></li>
+					<li class="nav-item"><a class="nav-link text-dark" href="#">Productos</a></li>
+					<li class="nav-item"><a class="nav-link text-dark" href="#">Contacto</a></li>
 				</ul>
 			</div>
 		</div>
@@ -58,34 +58,31 @@
         </div>
     </header>
 
-    <section class="container-fluid text-center text-white bg-black p-3">
-        <div class="container border-2 border-bottom py-4 mb-5">
+    <section class="container-fluid text-center bg-dark p-3">
+        <div class="container border-2 border-bottom text-light py-4 mb-5">
             <h1>¿Quiénes somos?</h1>
         </div>
         <div class="container">
-            <div class="row text-start">
+            <div class="row text-start text-light">
                 <div class="col-4">
-                    <div class="bg-light">aaaaa
-                    </div>
+                    <div class="bg-light text-dark text-center py-1 mb-3"><i class="fas fa-location-arrow"></i></div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam deleniti repellat eius dolores odit. Voluptatibus natus cupiditate perspiciatis repellendus accusamus deserunt eveniet. Sunt reprehenderit, esse aut eius illum corrupti perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum deserunt minima fuga a excepturi voluptate! Molestiae possimus optio enim labore voluptates accusantium, qui dolorem recusandae beatae nemo blanditiis vel mollitia! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates aut facere natus optio, pariatur corporis quo dolor vel! Rerum sed impedit, obcaecati possimus omnis numquam modi animi nulla molestiae aspernatur!</p>
                 </div>
                 <div class="col-4">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam deleniti repellat eius dolores odit. Voluptatibus natus cupiditate perspiciatis repellendus accusamus deserunt eveniet. Sunt reprehenderit, esse aut eius illum corrupti perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum deserunt minima fuga a excepturi voluptate! Molestiae possimus optio enim labore voluptates accusantium, qui dolorem recusandae beatae nemo blanditiis vel mollitia! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates aut facere natus optio, pariatur corporis quo dolor vel! Rerum sed impedit, obcaecati possimus omnis numquam modi animi nulla molestiae aspernatur!</p>
-                    <div class="bg-light">aaaaaa
-                    </div>
+                    <div class="bg-light text-dark text-center py-1 mt-3"><i class="fas fa-mountain"></i></div>
                 </div>
                 <div class="col-4">
-                    <div class="bg-light">aaaaaa
-                    </div>
+                    <div class="bg-light text-dark text-center py-1 mb-3"><i class="fas fa-map-marker-alt"></i></div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam deleniti repellat eius dolores odit. Voluptatibus natus cupiditate perspiciatis repellendus accusamus deserunt eveniet. Sunt reprehenderit, esse aut eius illum corrupti perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum deserunt minima fuga a excepturi voluptate! Molestiae possimus optio enim labore voluptates accusantium, qui dolorem recusandae beatae nemo blanditiis vel mollitia! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates aut facere natus optio, pariatur corporis quo dolor vel! Rerum sed impedit, obcaecati possimus omnis numquam modi animi nulla molestiae aspernatur!</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="container-fluid p-4 bg-black">
-        <div class="container ">
-            <div class="text-center text-white border-2 border-bottom">
+    <section class="container-fluid p-4 bg-dark">
+        <div class="container">
+            <div class="text-center text-light border-2 border-bottom py-4">
                 <h1>Destacados</h1>
             </div>
             <div class="row row-cols-1 row-cols-md-2 g-4">
@@ -129,15 +126,15 @@
         </div>
 	</section>
 
-    <section id="contact" class="container-fluid bg-black">
-        <div class="container">
-            <h1 class="text-center text-white">Contacto</h1>
-            <div class="typeform-widget" data-url="https://wszlrkz0aip.typeform.com/to/TcQNq7QB" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=AYVtoJ&utm_source=typeform.com-13260463-Basic&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #999" target="_blank">Typeform</a> </div>
+    <section id="contact" class="container-fluid bg-dark">
+        <div class="container pt-4 pb-5">
+            <h1 class="text-center text-light pb-4">Contacto</h1>
+            <div class="typeform-widget border-2 border p-4" data-url="https://wszlrkz0aip.typeform.com/to/TcQNq7QB" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"></div>
         </div>
     </section>
 
-    <footer class="bg-dark text-center text-light py-4">
-		<h4 class="lobster-1 display-1 fs-2 m-0" style="color:#ffffff">aaaaaa</h4>
+    <footer class="bg-light text-center text-light py-4">
+		<h4 class="lobster-1 display-1 fs-2 m-0 text-dark">aaaaaa</h4>
 	</footer>
 
 <!-- Bootstrap -->	
