--- a/index.html
+++ b/index.html
@@ -18,23 +18,25 @@
 </head>
 
 <body>
-    <nav class="container-fluid navbar navbar-expand-lg navbar-dark fixed-top">
-		<div class="container text-left" >
-			<a class="navbar-brand" href="#"><img src="assets/img/viajes.svg" alt="Logo de Olivia Ros" width="50px"></a><h4 class="display-1 my-3 fs-2 text-start">Viajes Chile</h4>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" arialabel="Toggle navigation"> 
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav ms-auto">
-					<li class="nav-item active"><a class="nav-link text-dark" href="#">Inicio<span class="sr-only">(current)</span></a></li>
-					<li class="nav-item"><a class="nav-link text-dark" href="#">Productos</a></li>
-					<li class="nav-item"><a class="nav-link text-dark" href="#">Contacto</a></li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-
     <header>
+        <nav class="container-fluid navbar navbar-expand-lg navbar-dark fixed-top">
+            <div class="container text-left" >
+                <a class="navbar-brand" href="#"><img src="assets/img/viajes.svg" alt="Logo de Olivia Ros" width="50px"></a><h4 class="display-1 my-3 fs-2 fw-bold text-light text-start">Viajes Chile</h4>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" arialabel="Toggle navigation"> 
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item active"><a class="nav-link text-light" href="#">Inicio<span class="sr-only">(current)</span></a></li>
+                        <li class="nav-item"><a class="nav-link text-light" href="#quienes-somos">¿Quiénes Somos?</a></li>
+                        <li class="nav-item"><a class="nav-link text-light" href="#destacados">Destacados</a></li>
+                        <li class="nav-item"><a class="nav-link text-light" href="#contacto">Contacto</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+    
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -58,7 +60,7 @@
         </div>
     </header>
 
-    <section class="container-fluid text-center bg-dark p-3">
+    <section class="container-fluid text-center bg-dark p-3 d-none d-md-block" id="quienes-somos">
         <div class="container border-2 border-bottom text-light py-4 mb-5">
             <h1>¿Quiénes somos?</h1>
         </div>
@@ -80,12 +82,12 @@
         </div>
     </section>
 
-    <section class="container-fluid p-4 bg-dark">
+    <section class="container-fluid p-4 bg-dark" id="destacados">
         <div class="container">
             <div class="text-center text-light border-2 border-bottom py-4">
                 <h1>Destacados</h1>
             </div>
-            <div class="row row-cols-1 row-cols-md-2 g-4">
+            <div class="row row-cols-1 row-cols-md-2 g-4 pt-2">
                 <div class="col-lg-3 col-sm-6 p-4">
                     <div class="card">
                         <img src="assets/img/card1.jpg" class="card-img-top" alt="colaciones">
@@ -126,18 +128,28 @@
         </div>
 	</section>
 
-    <section id="contact" class="container-fluid bg-dark">
-        <div class="container pt-4 pb-5">
+    <section id="contact" class="container-fluid bg-dark" >
+        <div class="container pt-4 pb-5" id="contacto">
             <h1 class="text-center text-light pb-4">Contacto</h1>
             <div class="typeform-widget border-2 border p-4" data-url="https://wszlrkz0aip.typeform.com/to/TcQNq7QB" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"></div>
         </div>
     </section>
 
-    <footer class="bg-light text-center text-light py-4">
-		<h4 class="lobster-1 display-1 fs-2 m-0 text-dark">aaaaaa</h4>
+    <footer class="container bg-light text-light py-4">
+        <div class="row text-center">
+            <div class="col-lg-6 col-sm-12">
+		        <h4 class="fw-bold display-5 text-dark">Viajes Chile</h4>
+            </div>
+            <div class="col-lg-6 col-sm-12 text-dark display-5">
+                <a href="https://github.com/SebastianLineal/Viajes-Chile" target="blank"><i class="fab fa-github me-2"></i></a>
+                <a href="https://github.com"><i class="fab fa-linkedin-in me-2"></i></a>
+                <a href="https://github.com"><i class="fab fa-twitter me-2"></i></a>
+                <a href="https://github.com"><i class="fab fa-facebook"></i></a>
+            </div>
+        </div>
 	</footer>
 
-<!-- Bootstrap -->	
+<!-- Bootstrap js -->	
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <!-- JavaScript -->
 <script src="assets/js/main.js"></script>	
