--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <div class="card">
                         <img src="assets/img/card1.jpg" class="card-img-top" alt="colaciones">
                         <div class="card-body">
-                            <h5 class="card-title fw-bold">Colaciones</h5>
+                            <h5 class="card-title fw-bold">Lorem ipsum</h5>
                             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         </div>
                     </div>
@@ -101,7 +101,7 @@
                     <div class="card">
                         <img src="assets/img/card2.jpg" class="card-img-top" alt="colaciones">
                         <div class="card-body">
-                            <h5 class="card-title fw-bold">Desayunos</h5>
+                            <h5 class="card-title fw-bold">Lorem ipsum</h5>
                             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         </div>
                     </div>
@@ -110,7 +110,7 @@
                     <div class="card">
                         <img src="assets/img/card3.jpg" class="card-img-top" alt="colaciones">
                         <div class="card-body">
-                            <h5 class="card-title fw-bold">Bebidas</h5>
+                            <h5 class="card-title fw-bold">Lorem ipsum</h5>
                             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         </div>
                     </div>
@@ -119,7 +119,7 @@
                     <div class="card">
                         <img src="assets/img/card4.jpg" class="card-img-top" alt="colaciones">
                         <div class="card-body">
-                            <h5 class="card-title fw-bold">Bebidas</h5>
+                            <h5 class="card-title fw-bold">Lorem ipsum</h5>
                             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         </div>
                     </div>
@@ -142,9 +142,9 @@
             </div>
             <div class="col-lg-6 col-sm-12 text-dark display-5">
                 <a href="https://github.com/SebastianLineal/Viajes-Chile" target="blank"><i class="fab fa-github me-2"></i></a>
-                <a href="https://github.com"><i class="fab fa-linkedin-in me-2"></i></a>
-                <a href="https://github.com"><i class="fab fa-twitter me-2"></i></a>
-                <a href="https://github.com"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.linkedin.com/in/sebastian-gonzalez-rozas-6530801a3/"><i class="fab fa-linkedin-in me-2"></i></a>
+                <a href="https://twitter.com/BarackObama?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i class="fab fa-twitter me-2"></i></a>
+                <a href="https://www.facebook.com/barackobama"><i class="fab fa-facebook"></i></a>
             </div>
         </div>
 	</footer>
