Octavo repositorio: Cambio final

--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
             </div>
             <div class="col-lg-6 col-sm-12 text-dark display-5">
                 <a href="https://github.com/SebastianLineal/Viajes-Chile" target="blank"><i class="fab fa-github me-2"></i></a>
-                <a href="https://www.linkedin.com/in/sebastian-gonzalez-rozas-6530801a3/"><i class="fab fa-linkedin-in me-2"></i></a>
-                <a href="https://twitter.com/BarackObama?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i class="fab fa-twitter me-2"></i></a>
-                <a href="https://www.facebook.com/barackobama"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.linkedin.com/in/sebastian-gonzalez-rozas-6530801a3/" target="blank"><i class="fab fa-linkedin-in me-2"></i></a>
+                <a href="https://twitter.com/BarackObama?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="blank"><i class="fab fa-twitter me-2"></i></a>
+                <a href="https://www.facebook.com/barackobama"><i class="fab fa-facebook" target="blank"></i></a>
             </div>
         </div>
 	</footer>
