--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <a href="https://github.com/SebastianLineal/Viajes-Chile" target="blank"><i class="fab fa-github me-2"></i></a>
                 <a href="https://www.linkedin.com/in/sebastian-gonzalez-rozas-6530801a3/" target="blank"><i class="fab fa-linkedin-in me-2"></i></a>
                 <a href="https://twitter.com/BarackObama?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="blank"><i class="fab fa-twitter me-2"></i></a>
-                <a href="https://www.facebook.com/barackobama"><i class="fab fa-facebook" target="blank"></i></a>
+                <a href="https://www.facebook.com/barackobama" target="blank"><i class="fab fa-facebook"></i></a>
             </div>
         </div>
 	</footer>
